[tool.poetry]
name = "machine-learning-knowledge"
version = "0.1.0"
description = ""
authors = ["Toshihiro Yamaguchi <toshihiro.engineer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.1.8"
quarto = "^0.1.0"
matplotlib = "^3.8.4"
scipy = "^1.13.0"
pandas = "^2.2.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
